# adventofcode2017

./: advent.cabal
app/: day10.hs  day11.hs  day12.hs  day13.hs  day13a.hs  day14.hs  day15.hs  day16.hs  day17.hs  day19.hs  day20.hs  day21.hs  day22.hs  day25.hs  day5a.hs  day6.hs  day8.hs  day9.hs
inputs/: input19.txt
src/: Dates.hs  Day10Rope.hs  Day15Generator.hs  Day20Particles.hs  Day21BoolStreams.hs  Day21PatternMatcher.hs  Day21Pixels.hs  Day22Grid.hs  Day25Turing.hs  Day25TuringParser.hs  Day9Groups.hs  Hex.hs  Lib.hs  NumericConversions.hs  Randoms.hs  Vec.hs  c.hs
test/: delme.sh  test10.hs  test11.hs  test15.hs  test18.hs  test20.hs  test22.hs  test9.hs
