name:                advent
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/advent#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Hex
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

--executable day5a
--  hs-source-dirs:      app
--  main-is:             day5a.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , advent
--                     , vector
--  default-language:    Haskell2010

-- executable day6
--   hs-source-dirs:      app
--   main-is:             day6.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , advent
--                      , vector
--   default-language:    Haskell2010

executable day8
  hs-source-dirs:      app
  main-is:             day8.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , text
  default-language:    Haskell2010

executable day11
  hs-source-dirs:      app
  main-is:             day11.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

executable day12
  hs-source-dirs:      app
  main-is:             day12.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test11
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test11.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable advent-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
  default-language:    Haskell2010

test-suite advent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , advent
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent
