name:                advent
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/advent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/advent#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Day9Groups
                     , Day10Rope
                     , Day15Generator
                     , Day20Particles
                     , Day22Grid
                     , Lib
                     , Hex
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
  default-language:    Haskell2010

--executable day5a
--  hs-source-dirs:      app
--  main-is:             day5a.hs
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  build-depends:       base
--                     , advent
--                     , vector
--  default-language:    Haskell2010

-- executable day6
--   hs-source-dirs:      app
--   main-is:             day6.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , advent
--                      , vector
--   default-language:    Haskell2010

executable day8
  hs-source-dirs:      app
  main-is:             day8.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , text
  default-language:    Haskell2010

executable day9
  hs-source-dirs:      app
  main-is:             day9.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , text
  default-language:    Haskell2010

test-suite test9
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test9.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day10
  hs-source-dirs:      app
  main-is:             day10.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , vector
  default-language:    Haskell2010

test-suite test10
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test10.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , vector
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day11
  hs-source-dirs:      app
  main-is:             day11.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test11
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test11.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day12
  hs-source-dirs:      app
  main-is:             day12.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

executable day13
  hs-source-dirs:      app
  main-is:             day13a.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

executable day14
  hs-source-dirs:      app
  main-is:             day14.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , vector
  default-language:    Haskell2010

executable day15
  hs-source-dirs:      app
  main-is:             day15.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , vector
  default-language:    Haskell2010

test-suite test15
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test15.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , vector
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day16
  hs-source-dirs:      app
  main-is:             day16.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
                     , vector
  default-language:    Haskell2010

test-suite test16
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test16.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day17
  hs-source-dirs:      app
  main-is:             day17.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test17
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test17.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day18
  hs-source-dirs:      app
  main-is:             day18.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test18
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test18.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day19
  hs-source-dirs:      app
  main-is:             day19.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test19
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test19.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day20
  hs-source-dirs:      app
  main-is:             day20.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test20
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test20.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day21
  hs-source-dirs:      app
  main-is:             day21.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test21
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test21.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day22
  hs-source-dirs:      app
  main-is:             day22.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test22
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test22.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day23
  hs-source-dirs:      app
  main-is:             day23.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test23
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test23.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day24
  hs-source-dirs:      app
  main-is:             day24.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test24
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test24.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable day25
  hs-source-dirs:      app
  main-is:             day25.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent
                     , containers
  default-language:    Haskell2010

test-suite test25
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test25.hs
  build-depends:       base
                     , advent
                     , containers
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent
